<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/entry_dashboard"
    android:padding="20dp"
    tools:context=".fragments.WelcomeFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:fontFamily="@font/david_libre"
        android:lineSpacingExtra="5dp"
        android:text="@string/identifying_and_handling_vehicle_malfunctions"
        android:textColor="@color/orange"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/david_libre"

        android:text="@string/discover_the_problem_with_your_car"
        android:textColor="@color/orange"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_BTN_logIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_BTN_logIn"
        style="@style/welcomeButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:padding="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_BTN_Register"
        style="@style/MyButtonTransparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_BTN_logIn"
        app:layout_constraintVertical_bias="0.287" />

</androidx.constraintlayout.widget.ConstraintLayout>