<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_dashboard"
    android:gravity="center"
    android:padding="20dp">

    <androidx.appcompat.widget.LinearLayoutCompat

        android:id="@+id/linearLayoutCompat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/popUp_EDT_email"
            style="@style/MyOutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:scrollbars="vertical"
            android:textColorHint="@color/orange"
            android:theme="@style/MyTextInputLayoutAppearance"
            app:boxStrokeColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                android:text=""
                android:textColor="@color/orange" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/popUP_EDT_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/orange"
            android:theme="@style/MyTextInputLayoutAppearance"
            app:boxStrokeColor="@color/orange"
            app:hintTextColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/orange" />
        </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
            android:id="@+id/popUp_PRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:theme="@style/myProgressBar"
            android:visibility="invisible" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/popUp_BTN_password"
            style="@style/welcomeButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/orange"
            android:padding="20dp"
            android:text="@string/login" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>