<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_dashboard"

    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".fragments.LogInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/logIn_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log In"
            android:textColor="@color/orange"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.LinearLayoutCompat

            android:id="@+id/linearLayoutCompat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logIn_title"
            app:layout_constraintVertical_bias="0.228">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/logIn_email"
                style="@style/MyOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:scrollbars="vertical"
                android:textColorHint="@color/orange"
                android:theme="@style/MyTextInputLayoutAppearance"
                app:boxStrokeColor="@color/orange">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:nestedScrollingEnabled="true"
                    android:textColor="@color/orange" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/logIn_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/orange"
                android:theme="@style/MyTextInputLayoutAppearance"
                app:boxStrokeColor="@color/orange"
                app:hintTextColor="@color/orange">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ProgressBar
            android:id="@+id/logIn_PRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/myProgressBar"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/logIn_Btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
            app:layout_constraintVertical_bias="0.674" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/logIn_TEV_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_is_failed_try_again"
            android:textColor="#CC052A"
            android:theme="@style/myProgressBar"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/logIn_Btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
            app:layout_constraintVertical_bias="0.625" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/logIn_Btn"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginBottom="232dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/button_anim">

        </com.airbnb.lottie.LottieAnimationView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textColor="#FDFDFD"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/logIn_Btn"
            app:layout_constraintEnd_toEndOf="@+id/logIn_Btn"
            app:layout_constraintStart_toStartOf="@+id/logIn_Btn"
            app:layout_constraintTop_toTopOf="@+id/logIn_Btn">

        </androidx.appcompat.widget.AppCompatTextView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/logIn_logInFaceBook_Or_Google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"

            android:text="@string/or_log_in_with"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logIn_Btn"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logIn_Btn"
            app:layout_constraintVertical_bias="1.0">


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/logIn_google"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/google" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>


