<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_dashboard"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".fragments.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Sign Up"
            android:textColor="@color/orange"
            android:textSize="50dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
            app:layout_constraintVertical_bias="0.344">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_fullName"
                style="@style/MyOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:scrollbars="vertical"
                android:textColorHint="@color/orange"
                android:theme="@style/MyTextInputLayoutAppearance"
                app:boxStrokeColor="@color/orange">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:textColor="@color/orange" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/orange"
                android:theme="@style/MyTextInputLayoutAppearance"
                app:boxStrokeColor="@color/orange"
                app:hintTextColor="@color/orange">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_EDT_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/orange"
                android:theme="@style/MyTextInputLayoutAppearance"
                app:boxStrokeColor="@color/orange"
                app:hintTextColor="@color/orange"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/orange">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/orange" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_textInputCompanies"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Company"

                android:textColorHint="@color/orange"
                app:boxStrokeColor="@color/orange"
                app:endIconTint="@color/orange"
                app:hintTextColor="@color/orange">

                <AutoCompleteTextView

                    android:id="@+id/sign_up_autoComplete_companies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColor="@color/orange" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_textInput_model"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="Model"
                android:textColorHint="@color/orange"
                app:boxStrokeColor="@color/orange"
                app:endIconTint="@color/orange"
                app:hintTextColor="@color/orange">

                <AutoCompleteTextView
                    android:id="@+id/sign_up_autoComplete_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="none"
                    android:textColor="@color/orange" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ProgressBar
            android:id="@+id/signUp_PRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:theme="@style/myProgressBar"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/signUp_Btn"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp_PRB"
            app:layout_constraintVertical_bias="0.372"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/button_anim">

        </com.airbnb.lottie.LottieAnimationView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUp_TXT_onBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="#FDFDFD"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/signUp_Btn"
            app:layout_constraintEnd_toEndOf="@+id/signUp_Btn"
            app:layout_constraintStart_toStartOf="@+id/signUp_Btn"
            app:layout_constraintTop_toTopOf="@+id/signUp_Btn">

        </androidx.appcompat.widget.AppCompatTextView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>